Use shared code (#73)
Drop classes present in shared.